testdata/cases/analyze/invalid_printf_call.expected
testdata/cases/analyze/invalid_printf_call.go:6:21: error[invalid-printf-call]: fmt.Sprintf format %d has argument 1 of incompatible type string
