testdata/cases/analyze/invalid_printf_call.go
package analyze_cases

import "fmt"

func invalidPrintfArgument() string {
	return fmt.Sprintf("count: %d", "many")
}
